--- a/TMS/Views/Shared/_TmsLayout.cshtml
+++ b/TMS/Views/Shared/_TmsLayout.cshtml
@@ -64,7 +64,7 @@
         <h2>TMS</h2>
         <br />
         <br />
-        <a href="@Url.Action("Index", "Home")">Tasks</a>
+        <a href="@Url.Action("Index", "Task")">Tasks</a>
     </div>
     <div class="content">
         @RenderBody()
